--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "randomize-starwars-names",
-  "version": "1.3.0",
+  "version": "0.0.0-development",
   "description": "Get random Star Wars names",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit": "git-cz",
+    "test": "mocha src/index.test.js -w",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dwicao/starwars-names.git"
+    "url": "https://github.com/dwicao/starwars-names.git"
   },
   "keywords": [
     "random",
@@ -24,5 +26,15 @@
   "homepage": "https://github.com/dwicao/starwars-names#readme",
   "dependencies": {
     "unique-random-array": "1.0.0"
+  },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "commitizen": "2.9.5",
+    "cz-conventional-changelog": "1.2.0",
+    "mocha": "3.2.0",
+    "semantic-release": "^6.3.2"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
