--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "commit": "git-cz",
     "prebuild": "rimraf dist",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "watch:test": "npm t -- -w",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
+    "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-stage-2": "6.18.0",
     "babel-register": "6.18.0",
@@ -47,10 +51,13 @@
     "commitizen": "2.9.5",
     "cz-conventional-changelog": "1.2.0",
     "ghooks": "2.0.0",
+    "json-loader": "0.5.4",
     "mocha": "3.2.0",
+    "npm-run-all": "4.0.0",
     "nyc": "10.0.0",
     "rimraf": "2.5.4",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.2",
+    "webpack": "1.14.0"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
